syntax = "proto3";

package mcp.orchestrator.v1;

message CreateNamespaceRequest {
  string name = 1;
  map<string, string> labels = 2;
  map<string, string> annotations = 3;
}

message GetNamespaceRequest {
  string name = 1;
}

message ListNamespacesRequest {
  map<string, string> label_selector = 1;
  int32 page_size = 2;
  string page_token = 3;
}

message ListNamespacesResponse {
  repeated NamespaceResponse namespaces = 1;
  string next_page_token = 2;
  int32 total_count = 3;
}

message DeleteNamespaceRequest {
  string name = 1;
}

message DeleteNamespaceResponse {
  bool success = 1;
  string message = 2;
}

message NamespaceResponse {
  string name = 1;
  map<string, string> labels = 2;
  int64 created_at = 3;
  string status = 4;
}
